<resources>
    <string name="app_name">ORDER TRACK PRO</string>
    <string name="banner">banner</string>
    <string name="username">username</string>
    <string name="log_in">Login</string>
    <string name="sign_up_prompt">don\'t have an account?</string>
    <string name="sign_up">sign up</string>
    <string name="or">or</string>
    <string name="forgotten_password">forgotten password?</string>
    <string name="password">password</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>
    <string name="profile_photo">profile picture</string>
    <string name="sample_name">Cashier\'s Name</string>
    <string name="template">to update</string>
    <string name="dine_in">Dine in</string>
    <string name="take_out">Take Out</string>
    <string name="choose_one_option">Choose One Option</string>
    <string name="ala_cart">ALA CARTE</string>
    <string name="rice_meal">RICE MEALS</string>
    <string name="drinks_and_dessert">DRINKS AND DESSERTS</string>
    <string name="barbeque">BBQ Inasal</string>
    <string name="bbq_inasal_price">₱ 0.00</string>
    <string name="bbq_inasal_qty">x3</string>
    <string name="bbq_inasal">BBQ Inasal</string>
    <string name="add_meal">Add Meal</string>
    <string name="cart">cart</string>
    <string name="logo">logo</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="qty">1</string>
    <string name="total">Total: ₱ 0.00</string>
    <string name="check_out">Check Out</string>
    <string name="remove">remove</string>
    <string name="warning_template">Delete Caution</string>
    <string name="warning_sentence">Are you sure that you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="get_user">current user</string>
    <string name="key">key</string>
    <string name="get_photo">get photo</string>
    <string name="add_new_meal">ADD NEW MEAL</string>
    <string name="add_item">add item</string>
    <string name="food_name">Food Name</string>
    <string name="price">Price</string>
    <string name="qty_template">Qty</string>
    <string name="delete_item">Delete Item</string>
    <string name="update_item">Update Item</string>
    <string name="invalid_template">Warning Notice</string>
    <string name="invalid_warning">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar.</string>
    <string name="okay">Okay</string>
    <string name="category">Category</string>
    <string name="empty_state">empty state</string>
    <string name="empty_state_template">Looks like there\'s no item in the cart\nTake a rest, you deserve it!</string>
    <string name="store_name">GO 2 INASAL</string>
    <string name="store_address">5 Visayas Street Payatas B,\nQuezon City, Philippines</string>
    <string name="store_phone">0915 832 2460</string>
    <string name="store_email">go2inasal.ph@gmail.com</string>
    <string name="tagline">A Place where Bacolod\'s Inasal meets Goto Batangas.</string>
    <string name="cashiers_name">Cashier\'s name: Test Cashier</string>
    <string name="received_money">Received Money: ₱ 0.00</string>
    <string name="change">Change: ₱ 0.00</string>
    <string name="reference">2187341829732189732</string>
    <string name="time">8:00</string>
    <string name="date">04–14–2024</string>
    <string name="payment">PAYMENT</string>
    <string name="money">Amount Money</string>
    <string name="get_uid">get uid</string>
    <string name="total_template">Total</string>
    <string name="forgot_password_prompt">Forgot Password</string>
    <string name="email">email</string>


    <string-array name="categories">
        <item>None</item>
        <item>Ala Carts</item>
        <item>Drinks and Desert</item>
        <item>Rice Meal</item>
    </string-array>
</resources>