<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ShowReceiptActivity"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            android:layout_gravity="center"
            />
        <TextView

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_name"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:fontFamily="@font/poppins_black"
            android:textAlignment="center"
            />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_black"
            />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_address"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
            />
        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_phone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
            />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/cashiersName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cashiers_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="center"
            />

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/foodName"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/qty_template"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:id="@+id/qty"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="16sp"
                android:id="@+id/price"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/total_template"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAlignment="center"
                />
        </LinearLayout>
        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            />

        <View
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/receivedMoney"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/received_money"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/change"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/total"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/total"
            android:textColor="@color/black"
            android:textSize="16sp"
            />


        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primary">

            <TextView
                android:id="@+id/reference"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reference"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>