<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/border_bottom">
    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:layout_toStartOf="@+id/price"
        android:layout_alignParentStart="true"
        android:text="@string/bbq_inasal"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/view"
        android:fontFamily="@font/poppins_black"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/bbq_inasal_price"
        android:textColor="@color/secondary"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_toStartOf="@+id/qty"
        android:background="@color/black"
        android:paddingTop="20dp" />

    <TextView
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/poppins_black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/bbq_inasal_qty"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        />
    <LinearLayout
        android:id="@+id/qty_holder"
        android:layout_below="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/primary"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/qtyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@color/primary"
            android:padding="10dp"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:text="@string/total"
        android:layout_marginStart="10dp"
        android:layout_above="@+id/remove"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_medium"
        />
    <Button
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/qty_holder"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/remove"
        android:textColor="@color/white" />

</RelativeLayout>