<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.AccountFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/primary"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/person_fill0_wght400_grad0_opsz24" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/displayName"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/template"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:layout_margin="10dp"
        />


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/logout"
        android:layout_margin="10dp"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/round_edit_text"
        app:backgroundTint="@color/primary"
        />

</LinearLayout>